# pyopenfluid

./: .gitignore  LICENSE  README.rst  setup.py
PyOpenFLUID/: CMakeLists.txt  PyOpenFLUIDWrapper.cpp  __init__.py
tests/: 00basic.py  10data.py  20simulation.py
tests/Generators.PRJ/: openfluid-project.conf
