CMAKE_MINIMUM_REQUIRED(VERSION 3.0)


PROJECT(PyOpenFLUID)


FIND_PACKAGE(OpenFLUIDHelpers REQUIRED)

OPENFLUID_DETECT_CXX14()

SET(Python_ADDITIONAL_VERSIONS 3)

FIND_PACKAGE(Qt5 COMPONENTS Core REQUIRED)
FIND_PACKAGE(OpenFLUID REQUIRED core base ware machine tools fluidx)
FIND_PACKAGE(PythonLibs REQUIRED)


INCLUDE_DIRECTORIES(${OpenFLUID_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})

SET(PyOpenFLUID_CPP_HPP PyOpenFLUIDWrapper.cpp)

ADD_LIBRARY(PyOpenFLUID SHARED ${PyOpenFLUID_CPP_HPP})

TARGET_LINK_LIBRARIES(PyOpenFLUID ${OpenFLUID_LIBRARIES}
                      Qt5::Core
                      ${PYTHON_LIBRARIES}
                     )
